--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,10 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/Owner/SkyDrive/Java Projects/leJOS NXJ/lib/nxt/classes.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/leJOS NXJ/lib/nxt/classes.jar" sourcepath="C:/Program Files/leJOS NXJ/lib/nxt/classes-src.zip">
+		<accessrules>
+			<accessrule kind="discouraged" pattern="**/internal/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
